# sber

./: example.env  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 54ba8162546d_.py  f1262bc0f6e8_.py  f21759de45a4_.py
src/app/: db.py  endpoints.py  middlewares.py  routes.py  settings.py
src/app/models/: __init__.py  bases.py  val_curs.py  valute.py
src/app/schemas/: __init__.py  val_curs.py  valute.py
src/app/services/: db_services.py  request_services.py
src/app/services/dataclasses/: cbr.py  response.py
src/app/utils/: convert.py  db.py  pagination.py  route.py  validation.py
