[tool.poetry]
name = "sber"
version = "0.1.0"
description = ""
authors = ["II9tka <fffxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
starlette-core = "^0.0.1"
itsdangerous = "^2.1.2"
httpx = "^0.24.0"
sqlalchemy-utils = "^0.40.0"
databases = "^0.7.0"
aiosqlite = "^0.18.0"
alembic = "^1.10.3"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
